--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>tutorial leaflet.js</title>
-	<link rel="stylesheet" href="leaflet.css" />
-	<script src="leaflet.js"></script>
+	<link rel="stylesheet" href="node_modules/leaflet/dist/leaflet.css" />
+	<script src="node_modules/leaflet/dist/leaflet.js"></script>
 	<link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
