--- a/index.html
+++ b/index.html
@@ -8,12 +8,18 @@
 	<meta charset="UTF-8">
 	<title>tutorial leaflet.js</title>
 	<link rel="stylesheet" href="node_modules/leaflet/dist/leaflet.css" />
+	<link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
 	<script src="node_modules/leaflet/dist/leaflet.js"></script>
 	<link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
-	<div id="map"></div>
-	<script type="text/javascript" src="index.js"></script>
+	<div id="bodywrap">
+        <header>
+            <h1>Itinerary Creation Tool</h1>
+        </header>
+        <div id="map"></div>
+    </div>
+    <script type="text/javascript" src="index.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
