--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
             <h1>Hi, {{nav.user}}</h1>
         </header>
         <div id="map"></div>
+        <footer>
+            &copy; Ayo Ayco. All Rights Reserved.
+        </footer>
     </div>
     <script type="text/javascript" src="index-leaflet.js"></script>
     <script type="text/javascript" src="index-angular.js"></script>
