combined js files into one index.js

--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
             &copy; Ayo Ayco. All Rights Reserved.
         </footer>
     </div>
-    <script type="text/javascript" src="index-leaflet.js"></script>
-    <script type="text/javascript" src="index-angular.js"></script>
+    <script type="text/javascript" src="index.js"></script>
 </body>
 </html>
