--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>tutorial leaflet.js</title>
+	<title>Taskmap 1.0.0</title>
 	<link rel="stylesheet" href="node_modules/leaflet/dist/leaflet.css" />
 	<link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
 	<link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body ng-app="taskmap">
 	<div id="bodywrap">
-        <div ng-include="'views/NavView.html'"></div>
+        <div id="header" ng-include="'views/NavView.html'"></div>
         <div id="map"></div>
-        <div ng-include="'views/FooterView.html'"></div>
+        <div id="footer" ng-include="'views/FooterView.html'"></div>
     </div>
     
     <!-- libraries -->
