--- a/app/Nav/NavView.html
+++ b/app/Nav/NavView.html
@@ -1,3 +1,3 @@
-<div ng-controller="UserController as ctrl">
+<div ng-controller="NavController as ctrl">
     <h1>Hi, {{ctrl.user.firstName}}</h1>
 </div>
