--- a/app/Footer/FooterView.html
+++ b/app/Footer/FooterView.html
@@ -1,3 +1,3 @@
         <div>
-            &copy; Ayo Ayco. All Rights Reserved.
+            <p>&copy; Ayo Ayco. All Rights Reserved.</p>
         </div>
