--- a/app/Nav/NavView.html
+++ b/app/Nav/NavView.html
@@ -1,5 +1,5 @@
 <div ng-controller="NavController as ctrl">
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-dark">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
@@ -14,24 +14,26 @@
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <form class="navbar-form navbar-left" role="search">
-            <div class="form-group">
-            <input type="text" class="form-control" placeholder="Search">
-            </div>
-            <button type="submit" class="btn btn-default">Submit</button>
-        </form>
-        <ul class="nav navbar-nav navbar-right">
-            <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ctrl.user.firstName}} ({{ctrl.user.premium? "Premium": "Basic"}})<span class="caret"></span></a>
-            <ul class="dropdown-menu">
-                <li><a href="#">Profile</a></li>
-                <li><a href="#">Settings</a></li>
-                <li><a href="#">Achievements</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="#">Sign Out</a></li>
+            <!--Search-->
+            <form class="navbar-form navbar-left" role="search">
+                <div class="form-group">
+                <input type="text" class="form-control" placeholder="Search">
+                </div>
+                <button type="submit" class="btn btn-default">Submit</button>
+            </form>
+            <!--User Dropdown-->
+            <ul class="nav navbar-nav navbar-right">
+                <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ctrl.user.firstName}} ({{ctrl.user.premium? "Premium": "Basic"}})<span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li><a href="#">Profile</a></li>
+                    <li><a href="#">Settings</a></li>
+                    <li><a href="#">Achievements</a></li>
+                    <li role="separator" class="divider"></li>
+                    <li><a href="#">Sign Out</a></li>
+                </ul>
+                </li>
             </ul>
-            </li>
-        </ul>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
     </nav>
