--- a/app/Nav/NavView.html
+++ b/app/Nav/NavView.html
@@ -1,5 +1,5 @@
 <div ng-controller="NavController as ctrl">
-    <nav class="navbar navbar-dark">
+    <nav class="navbar navbar-default">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
