--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
     
     <!-- libraries -->
     <script src="node_modules/jquery/dist/jquery.js"></script>
-	<script src="node_modules/leaflet/dist/leaflet.js"></script>
     <script src="node_modules/angular/angular.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+	<script src="node_modules/leaflet/dist/leaflet.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?v=3&libraries=places&sensor=false"></script>
     
     <!-- app -->
     <script type="text/javascript" src="scripts/app.js"></script>
