--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     
     
     <!-- libraries -->
-    <script src="node_modules/jquery/dist/jquery.js"></script>
+    <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/angular/angular.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 	<script src="node_modules/leaflet/dist/leaflet.js"></script>
