--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<div id="bodywrap" ng-controller="MainController as main">
         <div id="header" ng-include="'views/NavView.html'"></div>
         <div id="map"></div>
-        <div id="footer" ng-include="'views/FooterView.html'"></div>
+        <div id="footer" ng-include="'views/FooterView.html'"></div>fdsfds
     </div>
     
     
